tests/baselines/reference/destructuringTuple.errors.txt
destructuringTuple.ts(11,7): error TS2461: Type 'unknown' is not an array type.
destructuringTuple.ts(11,48): error TS18046: 'accu' is of type 'unknown'.


==== destructuringTuple.ts (2 errors) ====
    declare var tuple: [boolean, number, ...string[]];
    
    const [a, b, c, ...rest] = tuple;
    
    declare var receiver: typeof tuple;
    
    [...receiver] = tuple;
    
    // Repros from #32140
    
    const [oops1] = [1, 2, 3].reduce((accu, el) => accu.concat(el), []);
          ~~~~~~~
!!! error TS2461: Type 'unknown' is not an array type.
                                                   ~~~~
!!! error TS18046: 'accu' is of type 'unknown'.
    
    const [oops2] = [1, 2, 3].reduce((acc: number[], e) => acc.concat(e), []);
    